[package]
name = "esp32s3_demo"
version = "0.1.0"
authors = ["Chongbing Yu <bd8ejk@foxmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32s3_demo"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

# Don't change default dependencies' versions.
[dependencies]
log = "0.4.27"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-hal = "1.0.0"
embedded-graphics = "0.7.1"
mipidsi = "0.5.0"
display-interface-spi = "0.4.1"
anyhow = "1.0.97"
thiserror = "2.0.12"

[build-dependencies]
embuild = "0.33"
